[gd_scene load_steps=9 format=2]

[ext_resource path="res://Sprites/Characters/player.png" type="Texture" id=1]
[ext_resource path="res://Scenes/Player (platforming)/PlayerPlatformer.gd" type="Script" id=2]

[sub_resource type="Animation" id=1]
resource_name = "fall"
length = 0.001
step = 0.0
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:region_rect")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Rect2( 0, 132, 64, 64 ) ]
}

[sub_resource type="Animation" id=2]
resource_name = "idle"
length = 0.001
step = 0.0
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:region_rect")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Rect2( 66, 0, 64, 64 ) ]
}

[sub_resource type="Animation" id=3]
resource_name = "jump"
length = 0.001
step = 0.0
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:region_rect")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Rect2( 66, 66, 64, 64 ) ]
}

[sub_resource type="Animation" id=4]
resource_name = "run"
step = 0.0
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:region_rect")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Rect2( 0, 66, 64, 64 ) ]
}

[sub_resource type="Animation" id=5]
length = 0.001
step = 0.0
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:region_rect")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Rect2( 0, 0, 64, 64 ) ]
}

[sub_resource type="RectangleShape2D" id=6]
extents = Vector2( 23, 23.9251 )

[node name="Player" type="KinematicBody2D"]
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
scale = Vector2( 0.715686, 0.747525 )
texture = ExtResource( 1 )
region_enabled = true
region_rect = Rect2( 0, 132, 64, 64 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/fall = SubResource( 1 )
anims/idle = SubResource( 2 )
anims/jump = SubResource( 3 )
anims/run = SubResource( 4 )
anims/walk = SubResource( 5 )

[node name="Hitbox" type="CollisionShape2D" parent="."]
shape = SubResource( 6 )

[node name="Camera" type="Camera2D" parent="."]
current = true
zoom = Vector2( 1.5, 1.5 )
smoothing_enabled = true
smoothing_speed = 2.0

[node name="RunTimer" type="Timer" parent="."]
wait_time = 0.1
one_shot = true

[node name="RunSlowdownTimer" type="Timer" parent="."]
wait_time = 1.5
one_shot = true

[node name="JumpTimer" type="Timer" parent="."]
wait_time = 0.18
one_shot = true

[node name="GroundedTimer" type="Timer" parent="."]
wait_time = 0.18
one_shot = true
